--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Temparture Conversion</title>
+    <link rel="stylesheet" href="syle.css" />
   </head>
   <body>
     <form>
       <h1 id="h1">Temperature Conversion</h1>
 
-      <input id="input" type="number" /> <br />
+      <input id="input" type="number" value="0" /> <br />
 
       <input type="radio" id="toFahrenheit" name="unit" />
       <label for="toFahrenheit">Celsius to Fahrenheit</label> <br />
@@ -17,8 +18,8 @@
       <input type="radio" id="toCelsius" name="unit" />
       <label for="toCelsius">Fahrenheit to Celsius</label> <br />
 
-      <button id="button" onclick="converter()">Submit</button>
-      <p id="result">Select a unit</p>
+      <button type="button" id="button" onclick="converte()">Submit</button>
+      <p id="result"></p>
     </form>
 
     <script src="index.js"></script>
